# fluentpython

./: .gitignore  README.md  pyproject.toml
fluentpython/: vector.py
tests/: test_fluentpython.py  test_vector.py
