[tool.poetry]
name = "fluentpython"
version = "0.1.0"
description = ""
authors = ["Iain Dillingham <iain@dillingham.me.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
ipython = "^7.13.0"
mypy = "^0.770"
pylint = "^2.4.4"
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
